--- a/BlazorApp13/Server/Views/Authorization/Logout.cshtml
+++ b/BlazorApp13/Server/Views/Authorization/Logout.cshtml
@@ -1,7 +1,4 @@
-﻿@page 
-@model BlazorApp13.Server.Pages.LogoutModel
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using Microsoft.Extensions.Primitives
+﻿@using Microsoft.Extensions.Primitives
 
 <div class="jumbotron">
     <h1>Log out</h1>
@@ -9,7 +6,8 @@
 
     <form asp-controller="Authorization" asp-action="Logout" method="post">
         @* Flow the request parameters so they can be received by the LogoutPost action: *@
-        @foreach (var parameter in Model.Parameters)
+        @foreach (var parameter in Context.Request.HasFormContentType ?
+           (IEnumerable<KeyValuePair<string, StringValues>>) Context.Request.Form : Context.Request.Query)
         {
             <input type="hidden" name="@parameter.Key" value="@parameter.Value" />
         }
